// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PitchProgressTracker renders correctly at draft stage 1`] = `
<div>
  <div
    aria-label="Pitch progress: 1 of 3 steps completed"
    class="flex flex-col w-full px-6 py-6 bg-gray-50 rounded-xl shadow-sm border border-gray-100"
    role="navigation"
  >
    <div
      class="relative flex items-center justify-between w-full pt-6"
    >
      <div
        class="absolute top-1/2 left-0 w-full h-4 -translate-y-1/2 bg-gray-200 rounded-full"
      >
        <div
          class="h-4 rounded-full transition-all duration-700 gloss shadow-inner bg-gradient-to-r from-brand-500 via-brand-700 to-brand-900"
          style="width: 0%;"
        />
      </div>
      <div
        class="flex flex-col items-center"
      >
        <div
          aria-current="step"
          class="relative z-10 flex h-12 w-12 items-center justify-center rounded-full transition-all duration-300 bg-white ring-3 ring-brand-700 text-brand-700"
        >
          <svg
            class="lucide lucide-file-text h-4 w-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M15 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V7Z"
            />
            <path
              d="M14 2v4a2 2 0 0 0 2 2h4"
            />
            <path
              d="M10 9H8"
            />
            <path
              d="M16 13H8"
            />
            <path
              d="M16 17H8"
            />
          </svg>
          <span
            class="sr-only"
          >
            Submitted
          </span>
        </div>
        <span
          class="mt-3 text-xs text-center font-medium max-w-[80px] text-brand-900 font-bold"
        >
          Submitted
        </span>
      </div>
      <div
        class="flex flex-col items-center"
      >
        <div
          class="relative z-10 flex h-12 w-12 items-center justify-center rounded-full transition-all duration-300 bg-white border-2 border-gray-300 text-gray-400"
        >
          <svg
            class="lucide lucide-send h-4 w-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M14.536 21.686a.5.5 0 0 0 .937-.024l6.5-19a.496.496 0 0 0-.635-.635l-19 6.5a.5.5 0 0 0-.024.937l7.93 3.18a2 2 0 0 1 1.112 1.11z"
            />
            <path
              d="m21.854 2.147-10.94 10.939"
            />
          </svg>
          <span
            class="sr-only"
          >
            Sent
          </span>
        </div>
        <span
          class="mt-3 text-xs text-center font-medium max-w-[80px] text-gray-500"
        >
          Sent
        </span>
      </div>
      <div
        class="flex flex-col items-center"
      >
        <div
          class="relative z-10 flex h-12 w-12 items-center justify-center rounded-full transition-all duration-300 bg-white border-2 border-gray-300 text-gray-400"
        >
          <svg
            class="lucide lucide-file-text h-4 w-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M15 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V7Z"
            />
            <path
              d="M14 2v4a2 2 0 0 0 2 2h4"
            />
            <path
              d="M10 9H8"
            />
            <path
              d="M16 13H8"
            />
            <path
              d="M16 17H8"
            />
          </svg>
          <span
            class="sr-only"
          >
            Submitted
          </span>
        </div>
        <span
          class="mt-3 text-xs text-center font-medium max-w-[80px] text-gray-500"
        >
          Submitted
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`PitchProgressTracker renders correctly at pending stage 1`] = `
<div>
  <div
    aria-label="Pitch progress: 1 of 3 steps completed"
    class="flex flex-col w-full px-6 py-6 bg-gray-50 rounded-xl shadow-sm border border-gray-100"
    role="navigation"
  >
    <div
      class="relative flex items-center justify-between w-full pt-6"
    >
      <div
        class="absolute top-1/2 left-0 w-full h-4 -translate-y-1/2 bg-gray-200 rounded-full"
      >
        <div
          class="h-4 rounded-full transition-all duration-700 gloss shadow-inner bg-gradient-to-r from-brand-500 via-brand-700 to-brand-900"
          style="width: 0%;"
        />
      </div>
      <div
        class="flex flex-col items-center"
      >
        <div
          aria-current="step"
          class="relative z-10 flex h-12 w-12 items-center justify-center rounded-full transition-all duration-300 bg-white ring-3 ring-brand-700 text-brand-700"
        >
          <svg
            class="lucide lucide-file-text h-4 w-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M15 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V7Z"
            />
            <path
              d="M14 2v4a2 2 0 0 0 2 2h4"
            />
            <path
              d="M10 9H8"
            />
            <path
              d="M16 13H8"
            />
            <path
              d="M16 17H8"
            />
          </svg>
          <span
            class="sr-only"
          >
            Submitted
          </span>
        </div>
        <span
          class="mt-3 text-xs text-center font-medium max-w-[80px] text-brand-900 font-bold"
        >
          Submitted
        </span>
      </div>
      <div
        class="flex flex-col items-center"
      >
        <div
          class="relative z-10 flex h-12 w-12 items-center justify-center rounded-full transition-all duration-300 bg-white border-2 border-gray-300 text-gray-400"
        >
          <svg
            class="lucide lucide-send h-4 w-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M14.536 21.686a.5.5 0 0 0 .937-.024l6.5-19a.496.496 0 0 0-.635-.635l-19 6.5a.5.5 0 0 0-.024.937l7.93 3.18a2 2 0 0 1 1.112 1.11z"
            />
            <path
              d="m21.854 2.147-10.94 10.939"
            />
          </svg>
          <span
            class="sr-only"
          >
            Sent
          </span>
        </div>
        <span
          class="mt-3 text-xs text-center font-medium max-w-[80px] text-gray-500"
        >
          Sent
        </span>
      </div>
      <div
        class="flex flex-col items-center"
      >
        <div
          class="relative z-10 flex h-12 w-12 items-center justify-center rounded-full transition-all duration-300 bg-white border-2 border-gray-300 text-gray-400"
        >
          <svg
            class="lucide lucide-file-text h-4 w-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M15 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V7Z"
            />
            <path
              d="M14 2v4a2 2 0 0 0 2 2h4"
            />
            <path
              d="M10 9H8"
            />
            <path
              d="M16 13H8"
            />
            <path
              d="M16 17H8"
            />
          </svg>
          <span
            class="sr-only"
          >
            Submitted
          </span>
        </div>
        <span
          class="mt-3 text-xs text-center font-medium max-w-[80px] text-gray-500"
        >
          Submitted
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`PitchProgressTracker renders correctly at reporter_interested stage 1`] = `
<div>
  <div
    aria-label="Pitch progress: 3 of 3 steps completed"
    class="flex flex-col w-full px-6 py-6 bg-gray-50 rounded-xl shadow-sm border border-gray-100"
    role="navigation"
  >
    <div
      class="relative flex items-center justify-between w-full pt-6"
    >
      <div
        class="absolute top-1/2 left-0 w-full h-4 -translate-y-1/2 bg-gray-200 rounded-full"
      >
        <div
          class="h-4 rounded-full transition-all duration-700 gloss shadow-inner bg-gradient-to-r from-brand-500 via-brand-700 to-brand-900"
          style="width: 100%;"
        />
      </div>
      <div
        class="flex flex-col items-center"
      >
        <div
          class="relative z-10 flex h-12 w-12 items-center justify-center rounded-full transition-all duration-300 bg-gradient-to-br from-brand-500 to-brand-900 text-white shadow-lg"
        >
          <svg
            class="lucide lucide-file-text h-4 w-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M15 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V7Z"
            />
            <path
              d="M14 2v4a2 2 0 0 0 2 2h4"
            />
            <path
              d="M10 9H8"
            />
            <path
              d="M16 13H8"
            />
            <path
              d="M16 17H8"
            />
          </svg>
          <span
            class="sr-only"
          >
            Submitted
          </span>
        </div>
        <span
          class="mt-3 text-xs text-center font-medium max-w-[80px] text-brand-700"
        >
          Submitted
        </span>
      </div>
      <div
        class="flex flex-col items-center"
      >
        <div
          class="relative z-10 flex h-12 w-12 items-center justify-center rounded-full transition-all duration-300 bg-gradient-to-br from-brand-500 to-brand-900 text-white shadow-lg"
        >
          <svg
            class="lucide lucide-send h-4 w-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M14.536 21.686a.5.5 0 0 0 .937-.024l6.5-19a.496.496 0 0 0-.635-.635l-19 6.5a.5.5 0 0 0-.024.937l7.93 3.18a2 2 0 0 1 1.112 1.11z"
            />
            <path
              d="m21.854 2.147-10.94 10.939"
            />
          </svg>
          <span
            class="sr-only"
          >
            Sent
          </span>
        </div>
        <span
          class="mt-3 text-xs text-center font-medium max-w-[80px] text-brand-700"
        >
          Sent
        </span>
      </div>
      <div
        class="flex flex-col items-center"
      >
        <div
          aria-current="step"
          class="relative z-10 flex h-12 w-12 items-center justify-center rounded-full transition-all duration-300 bg-gradient-to-br from-amber-500 to-amber-600 text-white shadow-lg"
        >
          <svg
            class="lucide lucide-star h-4 w-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <polygon
              points="12 2 15.09 8.26 22 9.27 17 14.14 18.18 21.02 12 17.77 5.82 21.02 7 14.14 2 9.27 8.91 8.26 12 2"
            />
          </svg>
          <span
            class="sr-only"
          >
            Interested
          </span>
        </div>
        <span
          class="mt-3 text-xs text-center font-medium max-w-[80px] text-brand-900 font-bold"
        >
          Interested
          🔔
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`PitchProgressTracker renders correctly at reporter_not_interested stage 1`] = `
<div>
  <div
    aria-label="Pitch progress: 3 of 3 steps completed, declined"
    class="flex flex-col w-full px-6 py-6 bg-gray-50 rounded-xl shadow-sm border border-gray-100"
    role="navigation"
  >
    <div
      class="relative flex items-center justify-between w-full pt-6"
    >
      <div
        class="absolute top-1/2 left-0 w-full h-4 -translate-y-1/2 bg-gray-200 rounded-full"
      >
        <div
          class="h-4 rounded-full transition-all duration-700 gloss shadow-inner bg-gradient-to-r from-red-400 via-red-500 to-red-600"
          style="width: 100%;"
        />
      </div>
      <div
        class="flex flex-col items-center"
      >
        <div
          class="relative z-10 flex h-12 w-12 items-center justify-center rounded-full transition-all duration-300 bg-gradient-to-br from-brand-500 to-brand-900 text-white shadow-lg"
        >
          <svg
            class="lucide lucide-file-text h-4 w-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M15 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V7Z"
            />
            <path
              d="M14 2v4a2 2 0 0 0 2 2h4"
            />
            <path
              d="M10 9H8"
            />
            <path
              d="M16 13H8"
            />
            <path
              d="M16 17H8"
            />
          </svg>
          <span
            class="sr-only"
          >
            Submitted
          </span>
        </div>
        <span
          class="mt-3 text-xs text-center font-medium max-w-[80px] text-brand-700"
        >
          Submitted
        </span>
      </div>
      <div
        class="flex flex-col items-center"
      >
        <div
          class="relative z-10 flex h-12 w-12 items-center justify-center rounded-full transition-all duration-300 bg-gradient-to-br from-brand-500 to-brand-900 text-white shadow-lg"
        >
          <svg
            class="lucide lucide-send h-4 w-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M14.536 21.686a.5.5 0 0 0 .937-.024l6.5-19a.496.496 0 0 0-.635-.635l-19 6.5a.5.5 0 0 0-.024.937l7.93 3.18a2 2 0 0 1 1.112 1.11z"
            />
            <path
              d="m21.854 2.147-10.94 10.939"
            />
          </svg>
          <span
            class="sr-only"
          >
            Sent
          </span>
        </div>
        <span
          class="mt-3 text-xs text-center font-medium max-w-[80px] text-brand-700"
        >
          Sent
        </span>
      </div>
      <div
        class="flex flex-col items-center"
      >
        <div
          aria-current="step"
          class="relative z-10 flex h-12 w-12 items-center justify-center rounded-full transition-all duration-300 bg-gradient-to-br from-red-500 to-red-700 text-white shadow-lg"
        >
          <svg
            class="lucide lucide-triangle-alert h-4 w-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m21.73 18-8-14a2 2 0 0 0-3.48 0l-8 14A2 2 0 0 0 4 21h16a2 2 0 0 0 1.73-3"
            />
            <path
              d="M12 9v4"
            />
            <path
              d="M12 17h.01"
            />
          </svg>
          <span
            class="sr-only"
          >
            Declined
          </span>
        </div>
        <span
          class="mt-3 text-xs text-center font-medium max-w-[80px] text-brand-900 font-bold"
        >
          Declined
          ⚠
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`PitchProgressTracker renders correctly at sent_to_reporter stage 1`] = `
<div>
  <div
    aria-label="Pitch progress: 2 of 3 steps completed"
    class="flex flex-col w-full px-6 py-6 bg-gray-50 rounded-xl shadow-sm border border-gray-100"
    role="navigation"
  >
    <div
      class="relative flex items-center justify-between w-full pt-6"
    >
      <div
        class="absolute top-1/2 left-0 w-full h-4 -translate-y-1/2 bg-gray-200 rounded-full"
      >
        <div
          class="h-4 rounded-full transition-all duration-700 gloss shadow-inner bg-gradient-to-r from-brand-500 via-brand-700 to-brand-900"
          style="width: 50%;"
        />
      </div>
      <div
        class="flex flex-col items-center"
      >
        <div
          class="relative z-10 flex h-12 w-12 items-center justify-center rounded-full transition-all duration-300 bg-gradient-to-br from-brand-500 to-brand-900 text-white shadow-lg"
        >
          <svg
            class="lucide lucide-file-text h-4 w-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M15 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V7Z"
            />
            <path
              d="M14 2v4a2 2 0 0 0 2 2h4"
            />
            <path
              d="M10 9H8"
            />
            <path
              d="M16 13H8"
            />
            <path
              d="M16 17H8"
            />
          </svg>
          <span
            class="sr-only"
          >
            Submitted
          </span>
        </div>
        <span
          class="mt-3 text-xs text-center font-medium max-w-[80px] text-brand-700"
        >
          Submitted
        </span>
      </div>
      <div
        class="flex flex-col items-center"
      >
        <div
          aria-current="step"
          class="relative z-10 flex h-12 w-12 items-center justify-center rounded-full transition-all duration-300 bg-white ring-3 ring-brand-700 text-brand-700"
        >
          <svg
            class="lucide lucide-send h-4 w-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M14.536 21.686a.5.5 0 0 0 .937-.024l6.5-19a.496.496 0 0 0-.635-.635l-19 6.5a.5.5 0 0 0-.024.937l7.93 3.18a2 2 0 0 1 1.112 1.11z"
            />
            <path
              d="m21.854 2.147-10.94 10.939"
            />
          </svg>
          <span
            class="sr-only"
          >
            Sent
          </span>
        </div>
        <span
          class="mt-3 text-xs text-center font-medium max-w-[80px] text-brand-900 font-bold"
        >
          Sent
        </span>
      </div>
      <div
        class="flex flex-col items-center"
      >
        <div
          class="relative z-10 flex h-12 w-12 items-center justify-center rounded-full transition-all duration-300 bg-white border-2 border-gray-300 text-gray-400"
        >
          <svg
            class="lucide lucide-send h-4 w-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M14.536 21.686a.5.5 0 0 0 .937-.024l6.5-19a.496.496 0 0 0-.635-.635l-19 6.5a.5.5 0 0 0-.024.937l7.93 3.18a2 2 0 0 1 1.112 1.11z"
            />
            <path
              d="m21.854 2.147-10.94 10.939"
            />
          </svg>
          <span
            class="sr-only"
          >
            Sent
          </span>
        </div>
        <span
          class="mt-3 text-xs text-center font-medium max-w-[80px] text-gray-500"
        >
          Sent
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`PitchProgressTracker renders correctly at successful_coverage stage 1`] = `
<div>
  <div
    aria-label="Pitch progress: 4 of 4 steps completed"
    class="flex flex-col w-full px-6 py-6 bg-gray-50 rounded-xl shadow-sm border border-gray-100"
    role="navigation"
  >
    <div
      class="relative flex items-center justify-between w-full pt-6"
    >
      <div
        class="absolute top-1/2 left-0 w-full h-4 -translate-y-1/2 bg-gray-200 rounded-full"
      >
        <div
          class="h-4 rounded-full transition-all duration-700 gloss shadow-inner bg-gradient-to-r from-brand-500 via-brand-700 to-brand-900"
          style="width: 100%;"
        />
      </div>
      <div
        class="flex flex-col items-center"
      >
        <div
          class="relative z-10 flex h-12 w-12 items-center justify-center rounded-full transition-all duration-300 bg-gradient-to-br from-brand-500 to-brand-900 text-white shadow-lg"
        >
          <svg
            class="lucide lucide-file-text h-4 w-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M15 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V7Z"
            />
            <path
              d="M14 2v4a2 2 0 0 0 2 2h4"
            />
            <path
              d="M10 9H8"
            />
            <path
              d="M16 13H8"
            />
            <path
              d="M16 17H8"
            />
          </svg>
          <span
            class="sr-only"
          >
            Submitted
          </span>
        </div>
        <span
          class="mt-3 text-xs text-center font-medium max-w-[80px] text-brand-700"
        >
          Submitted
        </span>
      </div>
      <div
        class="flex flex-col items-center"
      >
        <div
          class="relative z-10 flex h-12 w-12 items-center justify-center rounded-full transition-all duration-300 bg-gradient-to-br from-brand-500 to-brand-900 text-white shadow-lg"
        >
          <svg
            class="lucide lucide-send h-4 w-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M14.536 21.686a.5.5 0 0 0 .937-.024l6.5-19a.496.496 0 0 0-.635-.635l-19 6.5a.5.5 0 0 0-.024.937l7.93 3.18a2 2 0 0 1 1.112 1.11z"
            />
            <path
              d="m21.854 2.147-10.94 10.939"
            />
          </svg>
          <span
            class="sr-only"
          >
            Sent
          </span>
        </div>
        <span
          class="mt-3 text-xs text-center font-medium max-w-[80px] text-brand-700"
        >
          Sent
        </span>
      </div>
      <div
        class="flex flex-col items-center"
      >
        <div
          class="relative z-10 flex h-12 w-12 items-center justify-center rounded-full transition-all duration-300 bg-gradient-to-br from-brand-500 to-brand-900 text-white shadow-lg"
        >
          <svg
            class="lucide lucide-star h-4 w-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <polygon
              points="12 2 15.09 8.26 22 9.27 17 14.14 18.18 21.02 12 17.77 5.82 21.02 7 14.14 2 9.27 8.91 8.26 12 2"
            />
          </svg>
          <span
            class="sr-only"
          >
            Interested
          </span>
        </div>
        <span
          class="mt-3 text-xs text-center font-medium max-w-[80px] text-brand-700"
        >
          Interested
          🔔
        </span>
      </div>
      <div
        class="flex flex-col items-center"
      >
        <div
          aria-current="step"
          class="relative z-10 flex h-12 w-12 items-center justify-center rounded-full transition-all duration-300 bg-gradient-to-br from-emerald-500 to-emerald-700 text-white shadow-lg"
        >
          <svg
            class="lucide lucide-trophy h-4 w-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M6 9H4.5a2.5 2.5 0 0 1 0-5H6"
            />
            <path
              d="M18 9h1.5a2.5 2.5 0 0 0 0-5H18"
            />
            <path
              d="M4 22h16"
            />
            <path
              d="M10 14.66V17c0 .55-.47.98-.97 1.21C7.85 18.75 7 20.24 7 22"
            />
            <path
              d="M14 14.66V17c0 .55.47.98.97 1.21C16.15 18.75 17 20.24 17 22"
            />
            <path
              d="M18 2H6v7a6 6 0 0 0 12 0V2Z"
            />
          </svg>
          <span
            class="sr-only"
          >
            Success
          </span>
        </div>
        <span
          class="mt-3 text-xs text-center font-medium max-w-[80px] text-brand-900 font-bold"
        >
          Success
          🏆
        </span>
      </div>
    </div>
  </div>
</div>
`;
